# SmolPB

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  output  output2  smol_proof.py
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/: constraint.hpp  model_evaluator.hpp  trimmer.hpp
include/SmolPB/: sample_library.hpp
include/SmolPB/evaluate/: constraint.hpp  line_parser.hpp  model_evaluator.hpp
rup/: rup_php65.rup
src/: CMakeLists.txt  constraint.cpp  main.cpp  model_evaluator.cpp  trimmer.cpp
src/evaluate/: CMakeLists.txt  constraint.cpp  model_evaluator.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  constraint_tests.cpp  model_evaluator_tests.cpp  tests.cpp
test_instances/interesting_proofs/: rup_php65.opb  rup_php65.veripb
tests/: test_constraint.cpp  test_main.cpp  test_model_evaluator.cpp
